[project]
name = "urban-rents"
version = "0.1.0"
description = "County-level annualized net returns to urban land for the contiguous United States"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.24.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "matplotlib>=3.8.0",
    "folium>=0.15.0",
    "tqdm>=4.66.0",
    "pyarrow>=14.0.0",
    "scipy>=1.16.3",
    "lxml>=6.0.2",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/urban_rents"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
